added the banner

--- a/index.html
+++ b/index.html
@@ -1,13 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <header class="header">
+        <div class="header-title-nav">
+            <div class="header-title">
+                <h1>G3 Architects</h1>
+            </div>
+            <div class="nav-bar">
+                <nav>
+                    <ul>
+                        <li class="nav-title">About</li>
+                        <li class="nav-title">Home</li>
+                        <li class="nav-title">Contact Us</li>
+                        <li class="nav-title">Login</li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div class="banner">
+            <div class="banner-title">
+                <H1>
+                    Brand New <span>Group Of Architects</span>
+                </H1>
+            </div>
+            <div class="banner-info">
+                <p>
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+            </div>
+
+            <button class="primary-button">Explore More</button>
+
+
+            <img class="banner-image" src="images/banner.png" alt="group of architects">
+
+        </div>
+
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
+
 </html>
