added media queries

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </p>
                     <div class="love-enjoy-description">
                         <h3 class="love-enjoy-description-title">
-                            Dexktop & Mobile Version
+                            Desktop & Mobile Version
                         </h3>
                         <p class="love-enjoy-description-info">
                             There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
@@ -165,19 +165,19 @@
 
             <div class="better-target-future">
                 <div class="target-future-info">
-                    <img src="images/target/future.jpg" alt="future image">
+                    <img class="target-future-info-image" src="images/target/future.jpg" alt="future image">
                     <h3 class="target-future-title">To have a sustainable future</h3>
                 </div>
                 <div class="target-future-info">
-                    <img src="images/target/people.jpg" alt="people">
+                    <img class="target-future-info-image" src="images/target/people.jpg" alt="people">
                     <h3 class="target-future-title">To outreach more people</h3>
                 </div>
                 <div class="target-future-info">
-                    <img src="images/target/community.jpg" alt="community">
+                    <img class="target-future-info-image" src="images/target/community.jpg" alt="community">
                     <h3 class="target-future-title">To grow a good community</h3>
                 </div>
                 <div class="target-future-info">
-                    <img src="images/target/download.jpeg" alt="world">
+                    <img class="target-future-info-image" src="images/target/download.jpeg" alt="world">
                     <h3 class="target-future-title">To build a better world</h3>
                 </div>
             </div>
